samples/_failures_safe/1761658811_369e9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af42e2e6.c: In function ‘main’:
./samples/SAFE/__tmp_af42e2e6.c:145:26: error: ‘heap’ undeclared (first use in this function)
  145 |         free_matrix_heap(heap
      |                          ^~~~
./samples/SAFE/__tmp_af42e2e6.c:145:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_af42e2e6.c:145:30: error: expected ‘)’ at end of input
  145 |         free_matrix_heap(heap
      |                         ~    ^
      |                              )
./samples/SAFE/__tmp_af42e2e6.c:145:9: error: expected declaration or statement at end of input
  145 |         free_matrix_heap(heap
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_af42e2e6.c:145:9: error: expected declaration or statement at end of input
